# consciousdb

./: .ci-trigger  .dockerignore  .gitattributes  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MIGRATION.md  Makefile  README.md  RELEASE_NOTES_v3.0.0.md  SECURITY.md  codecov.yml  mypy.ini  normalization_load_report.json  pyproject.toml  pytest.ini  requirements.txt  sitecustomize.py
.github/: PULL_REQUEST_TEMPLATE.md
adaptive/: __init__.py  manager.py
api/: cli.py  main.py  schemas.py
benchmarks/: datasets.py  metrics.py  run_benchmark.py
connectors/: base.py  chroma.py  memory.py  pgvector.py  pinecone.py  registry.py  vertex_ai.py
consciousdb/: __init__.py  client.py  config.py
consciousdb-sidecar/: .gitignore  .pre-commit-config.yaml  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  RELEASING.md  pyproject.toml
demo/: streamlit_app.py
docs/: ADAPTIVE.md  ALGORITHM.md  API.md  ARCHITECTURE.md  BENCHMARKS.md  BUILD_PLAN.md  COHERENCE_LAYER_PIVOT.md  CONFIGURATION.md  CONNECTORS.md  ConsciousDB_Simulations_Phases_A-G.md  DEPLOYMENT.md  DOCS_RESTRUCTURE.md  GAP_ANALYSIS.md  LICENSING.md  NEXT_IMPROVEMENTS.md  NORMALIZATION_PLAN.md  OPERATIONS.md  PRICING_MODEL.md  PRICING_RESEARCH_AND_SIMULATIONS.md  PR_DESCRIPTION_DRAFT.md  RECEIPTS.md  SDK_TRANSITION_PLAN.md  SECURITY.md  SIMULATIONS.md  TROUBLESHOOTING.md  WORKLOG.md  index.md  pricing_sensitivity_v1.csv
embedders/: __init__.py  base.py  openai.py  registry.py  sentence_transformer.py  vertex_ai.py
engine/: __init__.py  energy.py  rank.py  solve.py
examples/: custom_connector.py  metrics_integration.py  quick_start.ipynb  quickstart_sdk.py  sdk_basic.py
graph/: __init__.py  build.py
infra/: logging.py  metrics.py  secrets.py  settings.py
ops/: cloudrun_deploy.sh  gh-actions.yml
schemas/: query_response.schema.json
scripts/: debug_conservation.py
tests/: __init__.py  _fastapi_optional.py  conftest.py  test_adaptive_alpha.py  test_adaptive_auto_apply.py  test_adaptive_query_linkage.py  test_audit_log.py  test_audit_signature.py  test_auth_and_gates.py  test_bandit_selection.py  test_batch_query_basic.py  test_dense_vs_cg.py  test_energy_conservation.py  test_fallback_reason.py  test_fallback_reason_metric.py  test_force_fallback.py  (+18 more)
(+46 files in other folders)
