[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "consciousdb-sidecar"
version = "0.1.0"
description = "ConsciousDB Sidecar – model-free coherence optimization layer for vector retrieval"
readme = "README.md"
# Business Source License 1.1 is not an SPDX identifier; point to LICENSE file.
license = { file = "LICENSE" }
authors = [
	{ name = "ConsciousDB Authors" }
]
requires-python = ">=3.11"
classifiers = [
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Intended Audience :: Developers",
	"Topic :: Database",
	"Topic :: Scientific/Engineering :: Information Analysis",
	"Framework :: FastAPI",
	"Development Status :: 3 - Alpha"
]
dependencies = [
	"fastapi==0.115.0",
	"uvicorn==0.30.6",
	"pydantic==2.9.2",
	"numpy==1.26.4",
	"scipy==1.11.4",
	"httpx==0.27.2",
	"python-dotenv==1.0.1",
	"prometheus-client==0.20.0"
]

[tool.setuptools]
packages = [
	"adaptive",
	"api",
	"connectors",
	"embedders",
	"engine",
	"graph",
	"infra"
]

[project.optional-dependencies]
connectors-pgvector = ["psycopg2-binary==2.9.9"]
connectors-pinecone = ["pinecone-client==3.2.2"]
connectors-chroma = ["chromadb==0.5.4"]
connectors-vertex = ["google-cloud-aiplatform==1.70.0"]
embedders-sentencetransformers = ["sentence-transformers==2.7.0"]
embedders-openai = ["openai==1.44.0"]
dev = [
	"pytest==8.2.1",
	"pytest-cov>=5.0.0",
	"mypy>=1.11.0",
	"types-requests",
	"ruff>=0.5.0"
]
security = [
	"pip-audit>=2.7.0"
]

[project.urls]
Homepage = "https://github.com/Maverick0351a/consciousdb"
Repository = "https://github.com/Maverick0351a/consciousdb"
Issues = "https://github.com/Maverick0351a/consciousdb/issues"

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = ["dist", "build", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"engine/*.py" = ["N802", "N803", "N806"]
"graph/*.py"  = ["N802", "N803", "N806"]
"api/*.py"    = ["N802", "N803", "N806", "N815"]
"infra/settings.py" = ["N815"]
"api/schemas.py" = ["N815"]
"tests/*.py"  = ["N802", "N803", "N806", "N815", "E501"]
"adaptive/manager.py" = ["N803", "N815"]
